test/conformance/chainsaw/namespaced-deleting-policies/policy-status-ready/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ndpol-status-test
