test/conformance/chainsaw/namespaced-deleting-policies/policy-status-ready/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: namespaced-policy-status-ready
spec:
  concurrent: false
  steps:
  - name: create namespace
    try:
    - apply:
        file: ns.yaml
  - name: create namespaced deleting policy
    try:
    - apply:
        file: policy.yaml
  - name: wait-namespaced-deleting-policy-ready
    use:
      template: ../../_step-templates/namespaced-deleting-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: deleting-status-ready
        - name: namespace
          value: ndpol-status-test
